@@ -1,3 +1,7 @@
+2002-07-24  John Levon  <moz@compsoc.man.ac.uk>
+
+	* Menubar_pimpl.C: make it compile again
+ 
 2002-07-24  Angus Leeming  <leeming@lyx.org>
 
 	* FileDialog_private.C (done): add a false to the arguments passed to
